--- a/rails.conf
+++ b/rails.conf
@@ -1,3 +1,3 @@
 check process rails with pidfile /var/www/tmp/pids/server.pid
-     start = "/bin/sh -c 'cd /var/www && sh init.sh && sh server.sh'"
+     start = "/bin/sh -c 'cd /var/www; bundle exec rails server -p 80 -b 0.0.0.0'"
      stop  = "/bin/kill $(/bin/cat /var/www/tmp/pids/server.pid)"
